hphp/hack/test/typecheck/xhp_attr_3.php.exp
File "xhp_attr_3.php", line 4, characters 3-12:
->: syntax is not supported for lvalues (Parsing[1002])
